build: Add libxfce4windowing and libxfce4windowingui

--- a/panel-plugin/title/Makefile.am
+++ b/panel-plugin/title/Makefile.am
@@ -27,11 +27,12 @@ libwcktitle_la_SOURCES = \
 
 libwcktitle_la_CFLAGS = \
 	$(GTK_CFLAGS) \
-	$(LIBWNCK_CFLAGS) \
 	$(LIBXFCE4PANEL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(LIBXFCE4WINDOWING_CFLAGS) \
+	$(LIBXFCE4WINDOWINGUI_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 libwcktitle_la_LDFLAGS = \
@@ -44,11 +45,12 @@ libwcktitle_la_LDFLAGS = \
 libwcktitle_la_LIBADD = \
 	$(top_builddir)/common/libwck-common.la \
 	$(GTK_LIBS) \
-	$(LIBWNCK_LIBS) \
 	$(LIBXFCE4PANEL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
-	$(LIBXFCONF_LIBS)
+	$(LIBXFCONF_LIBS) \
+	$(LIBXFCE4WINDOWING_LIBS) \
+	$(LIBXFCE4WINDOWINGUI_LIBS)
 
 libwcktitle_la_DEPENDENCIES = \
 	$(top_builddir)/common/libwck-common.la
@@ -79,5 +81,5 @@ CLEANFILES += \
 
 wcktitle-dialogs_ui.h: wcktitle-dialogs.glade
 	$(AM_V_GEN) xdt-csource --static --strip-comments --strip-content --name=wcktitle_dialogs_ui $< >$@
-	
+
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
