--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -16,11 +16,12 @@ libwck_common_la_SOURCES = \
 
 libwck_common_la_CFLAGS = \
 	$(GTK_CFLAGS) \
-	$(LIBWNCK_CFLAGS) \
 	$(LIBXFCE4PANEL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(LIBXFCE4WINDOWING_CFLAGS) \
+	$(LIBXFCE4WINDOWINGUI_CFLAGS) \
 	$(PLATFORM_CFLAGS) \
 	-DDATADIR=\"$(datadir)\"
 
@@ -30,10 +31,11 @@ libwck_common_la_LDFLAGS = \
 
 libwck_common_la_LIBADD = \
 	$(GTK_LIBS) \
-	$(LIBWNCK_LIBS) \
 	$(LIBXFCE4PANEL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
-	$(LIBXFCONF_LIBS)
+	$(LIBXFCONF_LIBS) \
+	$(LIBXFCE4WINDOWING_LIBS) \
+	$(LIBXFCE4WINDOWINGUI_LIBS)
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
