--- a/panel-plugin/menu/Makefile.am
+++ b/panel-plugin/menu/Makefile.am
@@ -27,11 +27,12 @@ libwckmenu_la_SOURCES = \
 
 libwckmenu_la_CFLAGS = \
 	$(GTK_CFLAGS) \
-	$(LIBWNCK_CFLAGS) \
 	$(LIBXFCE4PANEL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(LIBXFCE4WINDOWING_CFLAGS) \
+	$(LIBXFCE4WINDOWINGUI_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 libwckmenu_la_LDFLAGS = \
@@ -44,11 +45,12 @@ libwckmenu_la_LDFLAGS = \
 libwckmenu_la_LIBADD = \
 	$(top_builddir)/common/libwck-common.la \
 	$(GTK_LIBS) \
-	$(LIBWNCK_LIBS) \
 	$(LIBXFCE4PANEL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
-	$(LIBXFCONF_LIBS)
+	$(LIBXFCONF_LIBS) \
+	$(LIBXFCE4WINDOWING_LIBS) \
+	$(LIBXFCE4WINDOWINGUI_LIBS)
 
 libwckmenu_la_DEPENDENCIES = \
 	$(top_builddir)/common/libwck-common.la
